2012-05-05  Sergio Durigan Junior  <sergiodj@redhat.com>

	* stap-probe.h: Do not include unecessary `probe.h'.

2012-05-05  Alan Modra  <amodra@gmail.com>

	* elfread.c (elf_symtab_read): Use bfd_abs_section_ptr and
	bfd_und_section_ptr.
	* machoread.c (macho_symtab_add_minsym): Use bfd_abs_section_ptr
	and bfd_com_section_ptr.

2012-05-04  Joel Brobecker  <brobecker@adacore.com>

	* MAINTAINERS (Past Maintainers): Add Chris Faylor.

2012-05-04  Joel Brobecker  <brobecker@adacore.com>

	* windows-nat.h (segment_register_p_ftype): New typedef.
	(windows_set_segment_register_p): Add declaration.
	* windows-nat.c (segment_register_p): New static global.
	(windows_set_segment_register_p): New function.
	(do_windows_fetch_inferior_registers): Add special handling
	for segment registers.
	* amd64-windows-nat.c: #include "amd64-tdep.h".
	(amd64_windows_segment_register_p): New function.
	(_initialize_amd64_windows_nat): Call windows_set_segment_register_p.
	* i386-windows-nat.c: #include "i386-tdep.h".
	(i386_windows_segment_register_p): New function.
	(_initialize_i386_windows_nat): Call windows_set_segment_register_p.

2012-05-04  Tristan Gingold  <gingold@adacore.com>

	* printcmd.c (set_command): Emit a warning if the expression is not
	an assignment.

2012-05-03  Joel Brobecker  <brobecker@adacore.com>

	* nto-procfs.c (procfs_find_new_threads, procfs_pid_to_str):
	Make static.

2012-05-03  Sergio Durigan Junior  <sergiodj@redhat.com>

	* stap-probe.c (stap_is_operator): Change declaration.
	(stap_get_opcode): Change return value.
	(stap_parse_argument_1): Update calls to `stap_get_opcode' and
	`stap_parse_argument_1'.

2012-05-03  Pedro Alves  <pedro@codesourcery.com>

	* infrun.c (displaced_step_fixup): Add "displaced:" prefix to
	debug log.

2012-05-03  Siva Chandra Reddy  <sivachandra@google.com>

	Add two new methods global_block and static_block to gdb.Symtab
	objects.
	* NEWS (Python scripting): Add entry about the new methods.